<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/ic_home2"
        android:title="@string/home_title" />
    <item android:checkableBehavior="single" android:title="@null">
        <menu>
            <item
                android:id="@+id/nav_consult"
                android:icon="@drawable/ic_view"
                android:title="@string/home_btn_view" />
            <item
                android:id="@+id/nav_search"
                android:icon="@drawable/ic_search"
                android:title="@string/home_btn_search" />

            <item
                android:id="@+id/nav_print"
                android:icon="@drawable/ic_print"
                android:title="@string/home_btn_print" />
            <item
                android:id="@+id/nav_drop"
                android:icon="@drawable/ic_clear"
                android:title="@string/home_btn_drop" />
            <item
                android:id="@+id/nav_close"
                android:icon="@drawable/ic_signout"
                android:title="@string/home_btn_signout" />
        </menu>
    </item>

</menu>
