<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="match_parent"
    android:background="#b0bec5">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="22dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="26sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="70dp"
            android:background="#fff"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editEstabNumber"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_account_balance_24dp"
                        android:drawableTint="@color/colorAccent"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:hint="@string/prompt_estabnumber"
                        android:inputType="text|number" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editPassword"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:drawableLeft="@drawable/ic_https_24dp"
                        android:drawableTint="@color/colorAccent"
                        android:hint="@string/prompt_password"
                        android:inputType="numberPassword" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:text="@string/action_login"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:background="@drawable/my_button_bg"
                    android:theme="@style/MyButton"/>
                <!--**Button configuration IP**-->
                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="@dimen/fab_margin"
                    android:src="@drawable/ic_setting">

                </android.support.design.widget.FloatingActionButton>
            </LinearLayout>
        </RelativeLayout>

        <ImageButton
            android:id="@+id/user_profile_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/login_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/user_img"
            android:elevation="4dp"
            android:padding="14dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />
    </RelativeLayout>
</ScrollView>